<resources>
    <string name="app_name">MovieBase</string>
    <string name="search">Szukaj</string>
    <string name="movies">Filmy</string>
    <string name="people">Osoby</string>
    <string name="tvshows">Seriale</string>
    <string name="actor">Aktor</string>
    <string name="producer">Producent</string>
    <string name="dataError">Błąd danych</string>
    <string name="addedToList">został dodany do listy</string>
    <string name="removedFromList">został usunięty z listy</string>
    <string name="favourite">ulubionych</string>
    <string name="toWatch">do obejrzenia</string>
    <string name="myList">Moja lista</string>
    <string name="trending">Trendujące</string>
    <string name="today">Dzisiaj</string>
    <string name="thisWeek">Ten tydzień</string>
    <string name="communityRating">Ocena użytkowników</string>
    <string name="description">Opis</string>
    <string name="mainPage">Strona główna</string>
    <string name="searchingPage">Wyszukiwarka</string>
    <string name="birthday">Urodzona/y</string>
    <string name="deathday">Zmarła/y</string>
    <string name="birthPlace">Miejsce narodzin</string>
    <string name="biography">Biografia</string>
    <string name="knownFrom">Znana/y z:</string>
    <string name="isLiving">Wciąż żyje!</string>
    <string name="favouriteList">Ulubione</string>
    <string name="toWatchList">Do obejrzenia</string>
    <string name="fullList">Wszystko</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>